<resources>
    <string name="app_name">Info Kosan</string>
    <string name="app_logo">App Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa kata Sandi?</string>
    <string name="login_text">Login</string>
    <string name="not_have_account">Belum Punya akun ? </string>
    <string name="register_now">Daftar Sekarang</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_kos">Cari Kost</string>
    <string name="recommended_kos">Rekomendasi Kos</string>
    <string name="detail_property">Detail Kos</string>

    <!-- strings register-->
    <string name="name">Nama</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki - Laki</string>
    <string name="female">Perempuan</string>
    <string name="phone">No. Telepon</string>
    <string name="id_number">No KTP</string>
    <string name="address">Alamat</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoia3VrdWhhbGYiLCJhIjoiY2txejg0dXRiMWZ0MjJvbzhwNzdsNXpuaCJ9.JVKrSO2Q-3bySWU7reFSiw</string>
</resources>