<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.auth.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="180dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginBottom="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_edit"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:hint="@string/name" />

        <TextView
            android:id="@+id/gender_rd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">
            <RadioButton
                android:id="@+id/maleRd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleRd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />
        </LinearLayout>

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phone_edit"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/phone" />

        <TextView
            android:id="@+id/ktp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/id_number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ktp_edit"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_perm_contact_calendar_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/id_number" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/address_edit"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_home_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/address" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_edit"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_mail_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_edit"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:padding="16dp"
            android:hint="@string/password" />

        <Button
            android:id="@+id/forgot_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/kos_primary"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:padding="0dp"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:text="@string/lupa_kata_sandi" />

        <Button
            android:id="@+id/submit_btn"
            android:padding="14dp"
            android:background="@drawable/primary_background_rounded"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:indeterminateTint="@color/kos_primary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
